@@ -1,5 +1,5 @@
 /*
- * Copyright 2014-2022 the original author or authors.
+ * Copyright 2014-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -385,7 +385,7 @@ public abstract class AbstractAdaptableMessageListener implements ChannelAwareMe
 							basicAck(request, channel);
 						}
 						else {
-							asyncFailure(request, channel, t);
+							asyncFailure(request, channel, t, source);
 						}
 				});
 			}
@@ -396,7 +396,7 @@ public abstract class AbstractAdaptableMessageListener implements ChannelAwareMe
 				}
 				MonoHandler.subscribe(resultArg.getReturnValue(),
 						r -> asyncSuccess(resultArg, request, channel, source, r),
-						t -> asyncFailure(request, channel, t),
+						t -> asyncFailure(request, channel, t, source),
 						() -> basicAck(request, channel));
 			}
 			else {
@@ -447,7 +447,7 @@ public abstract class AbstractAdaptableMessageListener implements ChannelAwareMe
 		}
 	}
 
-	private void asyncFailure(Message request, Channel channel, Throwable t) {
+	protected void asyncFailure(Message request, Channel channel, Throwable t, Object source) {
 		this.logger.error("Future, Mono, or suspend function was completed with an exception for " + request, t);
 		try {
 			channel.basicNack(request.getMessageProperties().getDeliveryTag(), false,
